--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
   <script src="https://unpkg.com/@zxing/library@0.19.1" type="application/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 </head>
 <body>
   <script>
